--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@ layout: home
           <i class="fas fa-mobile-alt"></i>
         </div>
         <h3>Application Mobile E-commerce</h3>
-        <p>Développement d'une application React Native avec système de paiement intégré.</p>
-        <div class="project-tech">
+        <p>Développement d'une application React Native avec système de paiement intégré.</p>        <div class="project-tech">
           <span>React Native</span>
           <span>Firebase</span>
           <span>Stripe</span>
@@ -124,11 +123,11 @@ layout: home
     <h2>Travaillons ensemble</h2>
     <p>Vous avez un projet en tête ? N'hésitez pas à me contacter !</p>
     <div class="cta-buttons">
-      <a href="mailto:grace@example.com" class="btn btn-primary">
+      <a href="mailto:elie@example.com" class="btn btn-primary">
         <i class="fas fa-envelope"></i>
         M'envoyer un email
       </a>
-      <a href="https://github.com/gracevayisiriria" class="btn btn-secondary" target="_blank">
+      <a href="https://github.com/elie ndako" class="btn btn-secondary" target="_blank">
         <i class="fab fa-github"></i>
         Voir mon GitHub
       </a>
@@ -138,14 +137,14 @@ layout: home
 
 <style>
 :root {
-  --primary: #6C63FF;
-  --secondary: #4A44C6;
+  --primary: #080450;
+  --secondary: #886e88;
   --accent: #FF6584;
   --dark: #2A2D3E;
   --light: #F7F9FC;
   --text: #333333;
   --text-light: #6C757D;
-  --shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  --shadow: 0 10px 30px rgba(105, 72, 72, 0.1);
   --transition: all 0.3s ease;
 }
 
@@ -173,7 +172,7 @@ body {
 .hero {
   padding: 120px 0 80px;
   background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  color: white;
+  color: rgb(175, 91, 91);
   text-align: center;
 }
 
