--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: home
     <div class="hero-content">
       <div class="hero-text">
         <span class="greeting">👋 Salut, moi c'est</span>
-        <h1><strong>Grace Vayisiriria</strong></h1>
+        <h1><strong>elie ndako</strong></h1>
         <p class="tagline">Développeur passionné par la technologie, les projets innovants et le partage de connaissances.</p>
         <div class="hero-buttons">
           <a href="#projets" class="btn btn-primary">Voir mes projets</a>
@@ -237,7 +237,7 @@ body {
 
 .btn-secondary {
   background: transparent;
-  color: white;
+  color: rgb(129, 103, 103);
   border-color: white;
 }
 
